--- a/our_work/CRISResources.html
+++ b/our_work/CRISResources.html
@@ -203,10 +203,10 @@ var __adobewebfontsappname__ = "muse";
        <p id="u10201-2">RESOURCE</p>
        <p id="u10201-3">&nbsp;</p>
        <p class="Main-Headline-Link" id="u10201-4">&nbsp;</p>
-       <p id="u10201-6">College Readiness Indicator Systems:</p>
+       <p id="u10201-6">Beyond College Eligibility:</p>
        <p id="u10201-10">
          <a class="nonblock" id="u11037" href="/resources/publications/FrameworkNarrative.CRIS.pdf" target="_blank">
-           A New Framework for Ensuring that <br/>Students Are On Track
+           A New Framework for Promoting <br/>College Readiness
          </a>
        </p>
        <p id="u10201-11">&nbsp;</p>
@@ -401,11 +401,11 @@ var __adobewebfontsappname__ = "muse";
       <p id="u12236-55">&nbsp;</p>
       <p class="CRIS-navigation" id="u12236-59"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/bts.html"><span id="u12236-56">• </span><span>San Francisco Bridge to Success</span></a></p>
       <p id="u12236-60">&nbsp;</p>
-      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/okf.html"><span id="u12236-61">• </span><span>Oakland PASS&#45;2</span></a></p>
+      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/okf.html"><span id="u12236-61">• </span><span>Oakland Kids First PASS&#45;2</span></a></p>
       <p id="u12236-65">&nbsp;</p>
-      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/core.html"><span id="u12236-61">• </span><span>CORE</span></a></p>
+      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/core.html"><span id="u12236-61">• </span><span>California Office to Reform Education (CORE)</span></a></p>
       <p id="u12236-69">&nbsp;</p>
-      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/collegeaccess.html"><span id="u12236-61">• </span><span>College Access Foundation</span></a></p>
+      <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/collegeaccess.html"><span id="u12236-61">• </span><span>College Access Foundation of California</span></a></p>
       <p id="u12236-73">&nbsp;</p>
       <p class="CRIS-navigation" id="u12236-64"><a class="nonblock" href="http://gardnercenter.stanford.edu/our_work/broadaccess.html"><span id="u12236-61">• </span><span>The Role of Broad&#45;Access Colleges <br/>in the San Francisco Bay Area Technology <br/>Economy</span></a></p>
       <p id="u12236-82">&nbsp;</p>
@@ -418,7 +418,7 @@ var __adobewebfontsappname__ = "muse";
      <div class="clearfix colelem" id="u11455-9"><!-- content -->
       <p id="u11455-4"><span id="u11455">[ </span><span>THE CRIS RESEARCH PARTNERS</span><span id="u11455-3">&nbsp;]</span></p>
       <p class="Main-Headline-Link" id="u11455-5">&nbsp;</p>
-      <p id="u11455-7">Each of the three CRIS research partners would be happy to respond to inquiries from school districts or other education stakeholders about using the CRIS tools or other aspects of supporting college and career readiness for all students. The CRIS Framework was jointly developed by the research partners; each partner has expertise within the Resource Series as follows. Please direct your questions to the contacts listed below.</p>
+      <p id="u11455-7">Each of the three CRIS research partners is happy to respond to inquiries from school districts or other education stakeholders about using the CRIS tools. The CRIS Framework was jointly developed by the research partners and draws on their specific expertise. Please direct your questions to the contacts listed below.</p>
      </div>
      <div class="clearfix colelem" id="ppu10211-21"><!-- group -->
       <div class="clearfix grpelem" id="pu10211-21"><!-- column -->
@@ -434,7 +434,7 @@ var __adobewebfontsappname__ = "muse";
       </div>
       <div class="clearfix grpelem" id="pu10214-17"><!-- column -->
        <div class="clearfix colelem" id="u10214-17"><!-- content -->
-        <p><a class="nonblock" href="http://ccsr.uchicago.edu" target="_blank"><span id="u10214">University of Chicago Consortium on Chicago School Research</span></a>&nbsp;conducts research of high technical quality that can inform and assess policy and practice in the Chicago Public Schools. CCSR seeks to expand communication among researchers, policymakers, and practitioners as we support the search for solutions to the problems of school reform. <a class="nonblock" href="https://twitter.com/UChicagoCCSR" target="_blank">@UChicagoCCSR</a></p>
+        <p><a class="nonblock" href="http://ccsr.uchicago.edu" target="_blank"><span id="u10214">University of Chicago Consortium on Chicago School Research</span></a>&nbsp;(UChicago CCSR) conducts research of high technical quality that can inform and assess policy and practice in the Chicago Public Schools. UChicago CCSR seeks to expand communication among researchers, policymakers, and practitioners as it supports the search for solutions to problems of school reform. It helps build capacity for school reform by identifying what matters for student success and school improvement, creating critical indicators to chart progress, and conducting theory-driven evaluation to identify how programs and policies are working. <a class="nonblock" href="https://twitter.com/UChicagoCCSR" target="_blank">@UChicagoCCSR</a></p>
         <p>&nbsp;</p>
         <p>A Technical Guide to College Readiness Indicators</p>
         <p>Selecting Effective Indicators</p>
