trying to fix formatting issues

--- a/our_work/CRISResources.html
+++ b/our_work/CRISResources.html
@@ -210,7 +210,7 @@ var __adobewebfontsappname__ = "muse";
          </a>
        </p>
        <p id="u10201-11">&nbsp;</p>
-       <p id="u10201-13">
+       <p id="u10201-13">&nbsp;
        <!--Uncomment to link to Gates Foundation resource
          <a class="nonblock" id="u11037" href="http://collegeready.gatesfoundation.org/Learning/CollegeReadinessIndicatorSystems" target="_blank">Online Framework</a> 
          -->
