--- a/our_work/CRISResources.html
+++ b/our_work/CRISResources.html
@@ -497,6 +497,7 @@ Muse.Utils.showWidgetsWhenReady();/* body */
 Muse.Utils.transformMarkupToFixBrowserProblems();/* body */
 } catch(e) { Muse.Assert.fail('Error calling selector function:' + e); }});
 </script>
+<!--#include virtual="/content-analytics.html" -->
    </body>
 </html>
 
