stages for week

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -46,6 +46,11 @@
 (650) 723-1137<br>	  
 <p><a href="mailto:dflowers@stanford.edu">dflowers@stanford.edu</a></p>
           <br>
+          <a class="header-link" href="/about_jgc/team_bios/hadar.html">Hadar Baharav</a>
+	  <p>Research Associate</p>
+(650) 723-4949<br>	 
+ <p><a href="mailto:hadarb@stanford.edu">hadarb@stanford.edu</a></p>
+<br>
 	  <a class="header-link" href="/about_jgc/team_bios/manuelito.html">Manuelito Biag</a>
 	  <p>Social Science Research Associate</p>
 (650) 724-2810<br>	  
@@ -90,15 +95,16 @@
 	  <p>Social Science Research Associate</p>
 (650) 724-8462<br>	 
  <p><a href="mailto:kcfehrer@stanford.edu">kcfehrer@stanford.edu</a></p>
+
 <br>
           <a class="header-link" href="/about_jgc/team_bios/jamila.html">Jamila Henderson</a>
--	  <p>Policy Analyst</p>
+	  <p>Policy Analyst</p>
 (650) 721-9042<br>	 
  <p><a href="mailto:jhender2@stanford.edu">jhender2@stanford.edu</a></p>
           <br>
           <br>
           <a class="header-link" href="/about_jgc/team_bios/mary.html">Mary Hofstedt</a>
--	  <p>Senior Community Engagement Associate</p>
+	  <p>Senior Community Engagement Associate</p>
 (650) 736-8594<br>	 
  <p><a href="mailto:hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
           <br>
@@ -107,11 +113,7 @@
 (650) 725-9853<br>	  
 <p><a href="mailto:rlondon@stanford.edu">jcliang@stanford.edu</a></p>
           <br>
- 	  <a class="header-link" href="/about_jgc/team_bios/rebecca.html">Rebecca London</a>
-	  <p>Senior Researcher</p>
-(650) 736-6076<br>	  
-<p><a href="mailto:rlondon@stanford.edu">rlondon@stanford.edu</a></p>
-          <br>
+ 	  
 
             </div>
    	    <div class="column-inner-box">
@@ -138,7 +140,7 @@
           <br>
 
           <a class="header-link" href="/about_jgc/team_bios/monika.html">Monika Sanchez</a>
-	  <p>Policy Analyst</p>
+	  <p>Senior Policy Analyst</p>
 (650) 721-5949<br>	  
 <p><a href="mailto:monikas1@stanford.edu">monikas1@stanford.edu</a></p>
           <br>
