--- a/about_jgc/team_bios/content-monika.html
+++ b/about_jgc/team_bios/content-monika.html
@@ -4,11 +4,11 @@
 
         <div class="jgc-content-feature-item-left">
            <h1 class="content-text-header">Monika Sanchez</h1>
-           <span class="content-bold">Policy Analyst</span><br>
+           <span class="content-bold">Senior Policy Analyst</span><br>
 	   <br>
 	  <p>
           <img class="bio-std" src="/images/team/Monika.jpg">
-<p>Monika is a Policy Analyst for the Gardner Center’s Youth Data Archive initiative. She has worked extensively in the areas of student attendance, early childhood, and student health and wellness. This work includes a study of the causes and consequences of chronic absenteeism at the individual, setting, and system levels, as well as analyses of early elementary outcomes of students in San Mateo County’s Preschool For All program.  Monika is currently part of the Gardner Center’s team providing research and evaluation expertise to the Promise Neighborhood initiative in San Francisco’s Mission District.</p>
+<p>Monika is a Senior Policy Analyst for the Gardner Center’s Youth Data Archive initiative. She has worked extensively in the areas of student attendance, early childhood, and student health and wellness. This work includes a study of the causes and consequences of chronic absenteeism at the individual, setting, and system levels, as well as analyses of early elementary outcomes of students in San Mateo County’s Preschool For All program.  Monika is currently part of the Gardner Center’s team providing research and evaluation expertise to the Promise Neighborhood initiative in San Francisco’s Mission District.</p>
 <br>
 <p>Prior to joining the Gardner Center, Monika was a Research Analyst at the southern California metropolitan planning organization, SANDAG, where she provided research and analytical support for the agency's economic services arm, including economic impact assessments, demographic data and industry cluster analysis, and community housing plans and programs evaluation. She has extensive experience coordinating efforts involving government agencies, community partners, and the public.</p> 
 <br>
