--- a/index.html
+++ b/index.html
@@ -206,10 +206,10 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://tedx.stanford.edu/2014" target="_blank">TEDxStanford</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="https://edpov.stanford.edu/events/manuelito-biag" target="_blank">Beyond Test Scores & Grades: Expanding the Notion of College Readiness</a></p>
        <p>&nbsp;</p>
-       <p>DATE: May 10, 2014&nbsp; TIME: 11:00 am — 6:30 pm</p>
-       <p>LOCATION: CEMEX Auditorium, Stanford University</p>
+       <p>DATE: June 3 &nbsp; <br> TIME: 5:00 pm to 7:00 pm</p>
+       <p>LOCATION: Workshop on Poverty, Inequality, & Education, Stanford University</p>
 	
        <p id="u1182-9">&nbsp;</p>
       </div>
