--- a/about_jgc/team_bios/content-hadar.html
+++ b/about_jgc/team_bios/content-hadar.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Research Associate</span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/team_pics_resized/Hadar.jpg">
+<img class="bio-std" src="/images/team/Hadar.jpg">
 Hadar Baharav joined the Gardner Center as a Research Associate in 2014. Her research interest encompass students' preparedness for college and the workforce, and students' transition into, navigation of, and departure from college. Hadar aims for her work to inform education practice and policy on how to diminish disparities in educational outcomes, strengthen a seamless connection between the K-12 and postsecondary systems, and build community capacity—to better prepare all students for life beyond high school.</p>
 <br>
 <p> Hadar earned a double-major bachelor's degree in Psychology and Education from Tel-Aviv University and a master's degree in Social-Organizational Psychology from Bar-Ilan University, Israel. Hadar holds a Ph.D. in Education with an emphasis on Research Methodology and a secondary interdisciplinary emphasis in Quantitative Methods in the Social Sciences from the University of California at Santa Barbara. </p>
