--- a/our_work/CRISResources.html
+++ b/our_work/CRISResources.html
@@ -57,7 +57,7 @@ var __adobewebfontsappname__ = "muse";
       <li class="MenuItemContainer clearfix grpelem" id="u9896"><!-- vertical box -->
        <div class="MenuItem MenuItemWithSubMenu clearfix colelem" id="u9897"><!-- vertical box -->
         <div class="MenuItemLabel NoWrap clearfix colelem" id="u9898-4"><!-- content -->
-         <p>HOME</p>
+         <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix colelem" id="u9834" href="/index.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u9836-4"><!-- content --><p>HOME</p></div></a>
         </div>
        </div>
       </li>
