--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
            </div>
           </li>
           <li class="MenuItemContainer clearfix colelem" id="u9454"><!-- horizontal box -->
-           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u9455" href="/our_work/capacity_building.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u9456-6"><!-- content --><p>Ledership Development</p><p>and Capacity Building</p></div></a>
+           <a class="nonblock nontext MenuItem MenuItemWithSubMenu clearfix grpelem" id="u9455" href="/our_work/capacity_building.html"><!-- vertical box --><div class="MenuItemLabel NoWrap clearfix colelem" id="u9456-6"><!-- content --><p>Leadership Development</p><p>and Capacity Building</p></div></a>
           </li>
           <li class="MenuItemContainer clearfix colelem" id="u9433"><!-- horizontal box -->
            <div class="MenuItem MenuItemWithSubMenu clearfix grpelem" id="u9450"><!-- vertical box -->
@@ -206,7 +206,7 @@
        <p id="u1047-3"><a class="nonblock" href="http://gardnercenter.stanford.edu/news/news.html" target="_blank"><span id="u1047">EVENTS</span></a></p>
       </div>
       <div class="clearfix colelem" id="u1182-11"><!-- content -->
-       <p class="Events-Subhead-Link"><a class="nonblock" href="https://edpov.stanford.edu/events/manuelito-biag" target="_blank">Beyond Test Scores & Grades: Expanding the Notion of <br>College Readiness</a></p>
+       <p class="Events-Subhead-Link"><a class="nonblock" href="http://edpov.stanford.edu/events/manuelito-biag" target="_blank">Beyond Test Scores & Grades: Expanding the Notion of <br>College Readiness</a></p>
        <p>&nbsp;</p>
        <p>DATE: June 3 &nbsp; <br> TIME: 5:00 pm to 7:00 pm</p>
        <p>LOCATION: Workshop on Poverty, Inequality, & Education, Stanford University</p>
