bio changes from this week

--- a/about_jgc/team_bios/content-manuelito.html
+++ b/about_jgc/team_bios/content-manuelito.html
@@ -8,7 +8,7 @@
 <br>
 <p>
 <img class="bio-std" src="/images/team/ManuelitoBiag.jpg">
-Manuelito Biag joined the John W. Gardner Center for Youth and Their Communities in 2012 as a Social Science Research Associate. His interests include school-based integrated services, the influence of schools as contexts for development, and the links between young people’s health and academic trajectories. Manuelito has conducted research on a range of education and youth-related topics including school connectedness, the impact of depression on high school graduation, and teachers’ awareness of students’ internalizing symptoms. He also has many years of experience working with adolescents in different settings including group homes, public schools, and day treatment programs. Manuelito received a Bachelor’s degree in Psychology from the University of California, San Diego. He then moved to England and earned a Master’s in Psychology from the University of Bristol researching the relation between mental health and acculturation among undocumented Filipino migrant workers. Manuelito holds a doctorate in School Organization and Education Policy from the University of California, Davis.
+Manuelito Biag received his Ph.D. in Education Policy from the University of California,Davis. His research interests include school-based integrated services, youth development, and the connections between children's and adolescents' health, psychosocial development, and educational trajectories. Manuelito has many years of experience working with young people in different settings including group homes, public schools, and day treatment programs. He joined the Gardner Center as a Research Associate in 2012.
 </p>
          </div>
 
