--- a/about_jgc/team_bios/content-graciela.html
+++ b/about_jgc/team_bios/content-graciela.html
@@ -4,7 +4,7 @@
 
         <div class="jgc-content-feature-item-left">
       <h1 class="content-text-header">  Graciela Borsato</h1>
-<span class="content-bold">Social Science Research Associate</span><br>
+<span class="content-bold">Senior Research Associate</span><br>
 <br>
 <p>
 <img class="bio-std" src="/images/team/Graciela.jpg">
