--- a/our_work/content-missionpromise.html
+++ b/our_work/content-missionpromise.html
@@ -4,27 +4,28 @@
 
         <div class="jgc-content-feature-item-left">
 
-<h1 class="title-page-header-big">Mission Promise Neighborhood</h1>
+<h1 class="title-page-header-big-left">Mission Promise Neighborhood</h1>
 
-<br>
+<div class="right-side-with-video"> <!--start video display-->
+   <iframe class="youtube-player" type="text/html" width="250" src="//www.youtube.com/embed/6SFup6WHM6o?list=UUYtp74jGqSdHJdIh9v61MNQ" allowfullscreen frameborder="0">
+   </iframe>
+   <br><br>
+<aside>
+  <div class="right-side-box-under-video">
 
- <aside>
-    <div class="right-side-box">
+  <h1 class="content-text-header">Partner Organizations</h1>
 
-      <h1 class="content-text-header">Partner Organizations</h1>
+  <ul>
+  <li>Mission Economic Development Agency</li>
+  </ul>
+  <br>
 
-    <ul>
-<li>Mission Economic Development Agency</li>
+  </div> <!--end right side box div-->
+</aside>
 
-</ul>
-<br>
+</div> <!--end of right side with video display-->
 
-
-</ul>
-    </div> <!--end right side box div-->
-    </aside>
-
-
+<br><br><br> <!---spacing under title-->
 
 
 <p>Residents of San Francisco’s Mission District face multiple challenges to socioeconomic success, including high poverty rates, a lack of affordable housing, and language barriers.  Additionally, despite the fact that San Francisco Unified School District (SFUSD) is one of the highest performing school districts in California, significant disparities exist within it, and seven of the district’s ten lowest performing schools are in the Mission neighborhood. While many organizations are already working within the Mission District to effect change, there is currently no coordinated approach to providing services. An opportunity exists for these providers to join forces and collaborate on issues like early learning and development, student achievement and school improvement, family economic success, and strong and safe neighborhoods.</p>
