--- a/our_work/content-yda.html
+++ b/our_work/content-yda.html
@@ -75,22 +75,11 @@ decreased duplication, and identification of gaps in services; </li>
 <p>One of the most powerful benefits of the YDA is the ability to look at youths’ pathways across time and across environments. This approach enables agencies to learn which youth are accessing which services—and in which combinations—and to determine the most positive outcomes for them. In addition to examining traditional academic outcomes of youth (such as test scores), the YDA can also facilitate the use of outcomes such as school discipline and attendance and involvement with juvenile justice, and positive indicators of youth development such as motivation and self-efficacy. By linking student data across agencies and over time, we can ask, for example: As parents move from welfare to work, what are the impacts on children’s school performance? Does participation in multiple youth development programs affect this impact? </p>
 
 <br>
+ For more information please
 
-<h1 class="content-text-header">Future Directions</h1>
+contact Leslie Patron, Project Coordinator at
 
-<p>The Gardner Center is currently in the process of building partnerships with various organizations
-
-and institutions locally and regionally to further develop the YDA’s ability
-
-to support youth and the institutions and communities that serve them. The
-
-YDA is well underway in San Mateo County, CA; Orange County, CA; and San Francisco County, CA and is
-
-in development in Santa Clara and Alameda Counties as well. For more information please
-
-contact Rebecca London, Senior Researcher at
-
-<a href= "mailto:rlondon@stanford.edu">rlondon@stanford.edu.</a>
+<a href= "mailto:lpatron@stanford.edu">lpatron@stanford.edu.</a>
 
 </p>
 
