--- a/resources/content-issue-briefs.html
+++ b/resources/content-issue-briefs.html
@@ -9,6 +9,7 @@
 <span class="content-bold">2014</span>
 <ul style="list-style: none;">
 <li><a href="/resources/publications/PFA_IssueBrief_2014.pdf" class="link-no-underline"> Longitudinal View of Educational Outcomes for Preschool for All Participants in Redwood City School District (2014)</a></li>
+<li><a href="/resources/publications/RWC_CS_IB_2014.pdf" class="link-no-underline">The Links Between Program Participation and Students' Outcomes: The Redwood City Community Schools Project</a></li>
 <li><a href="/resources/publications/GGUSDIssueBrief.pdf" class="link-no-underline">Examining Students' Math Course-Taking & Educational Outcomes in the Garden Grove Unified School District (Year 1)</a></li>
 </ul>
 <br>
