--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
       <p><a class="nonblock" href="/resources/publications/brochure-12-13-12.pdf"  target="_blank">Click here for PDF version</a></p>
      </div>
      <div class="grpelem" id="u1043"><!-- custom html -->
-      <iframe width="328" height="210" src="http://www.youtube.com/embed/2eBptnf-YW0?rel=0" frameborder="0"></iframe>
+      <iframe width="328" height="210" src=//www.youtube.com/embed/0QakBLcldTQ?list=PLsRNoUx8w3rPvhx_lImJfT7aiQ5tEbxoj></iframe>
 </div>
      <div class="clearfix grpelem" id="u1041-5"><!-- content -->
-      <p><span id="u1041">Founding Director Milbrey McLaughlin</span>&nbsp;discusses the lasting legacy of John W. Gardner at the JWG Centennial.</p>
+      <p><span id="u1041">Gardner Center's Prudence Carter</span>&nbsp;speaking at TEDxStanford 2014.</p>
      </div>
     </div>
     <div class="clearfix colelem" id="pu7265-4"><!-- group -->
