pdfs and all modificiations

--- a/our_work/content-missionpromise.html
+++ b/our_work/content-missionpromise.html
@@ -19,7 +19,10 @@
   <li>Mission Economic Development Agency</li>
   </ul>
   <br>
-
+<h1 class="content-text-header">Publications</h1>
+<ul>
+<li>Mission Promise Neighborhood: Residence and SFUSD Student Enrollment Patterns 2011-2012 (<a href="/resources/publications/MPN_IssueBrief_2014.pdf" class="link-no-underline" target="_blank">Issue Brief</a> & <a href="/resources/publications/MPN_Snapshot_2014.pdf"class="link-no-underline">Snapshot</a>)</li>
+</ul>
   </div> <!--end right side box div-->
 </aside>
 
