--- a/about_jgc/content-jobs.html
+++ b/about_jgc/content-jobs.html
@@ -7,10 +7,7 @@
 
 <br>
 <br>
-<b>Summer Research Assistant</b>
-<br>
-<br>
-<p>This is a Summer RA position (2014) with the potential to continue in 2014-15 at the 25-50% level. The RA will work with Gardner Center staff and other RAs to: (a) prepare the administrative data sets from seven California school districts for analysis and (b) to explore how to include data on chronic absence, suspensions and expulsions, school persistence, and graduation rates into an accountability index. Experience working with STATA or similar data analysis/statistical programs strongly preferred. Responsibilities will include supporting in-depth background research on accountability issues with the partner districts, and contributing to literature reviews as needed. Travel within California may be required. If interested, contact larissa.collins@stanford.edu.</p>
+<p>There are no open positions at this time.</p>
 
 
          </div>
