changes with 4 new people

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -81,28 +81,24 @@
 (650) 723-3099<br>	  
 <p><a href="mailto:larissa.collins@stanford.edu">larissa.collins@stanford.edu</a></p>
           <br>
-          <a class="header-link" href="/about_jgc/team_bios/kara.html">Kara Dukakis</a>
-	  <p>Senior Community Engagement Associate</p>
-(650) 721-2971<br>	  
-<p><a href="mailto:kdukakis@stanford.edu">kdukakis@stanford.edu</a></p>
-          <br>
  <a class="header-link" href="/about_jgc/team_bios/kendra.html">Kendra Fehrer</a>
 	  <p>Social Science Research Associate</p>
 (650) 724-8462<br>	 
  <p><a href="mailto:kcfehrer@stanford.edu">kcfehrer@stanford.edu</a></p>
 
-<br>
+            </div>
+   	    <div class="column-inner-box">
           <a class="header-link" href="/about_jgc/team_bios/jamila.html">Jamila Henderson</a>
 	  <p>Policy Analyst</p>
 (650) 721-9042<br>	 
  <p><a href="mailto:jhender2@stanford.edu">jhender2@stanford.edu</a></p>
-          <br>
           <br>
           <a class="header-link" href="/about_jgc/team_bios/mary.html">Mary Hofstedt</a>
 	  <p>Senior Community Engagement Associate</p>
 (650) 736-8594<br>	 
  <p><a href="mailto:hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
           <br>
+
 <a class="header-link" href="/about_jgc/team_bios/judy.html">Judy Liang</a>
 	  <p>CORE Project Facilitator</p>
 (650) 725-9853<br>	  
@@ -110,8 +106,6 @@
           <br>
  	  
 
-            </div>
-   	    <div class="column-inner-box">
 
  		<a class="header-link" href="/about_jgc/team_bios/nancy.html">Nancy Mancini</a>
 	  <p>Communications Director</p>
@@ -119,15 +113,29 @@
 	  <p><a href="mailto:nmancini@stanford.edu">nmancini@stanford.edu</a></p>
           <br>
 
+ 		<a class="header-link" href="/about_jgc/team_bios/frances.html">Frances Miller</a>
+	  <p>Policy Analyst</p>
+(650) 736-6076<br>
+	  <p><a href="mailto:fkmiller@stanford.edu">fkmiller@stanford.edu</a></p>
+          <br>
+
 	 </div>
    	    <div class="column-inner-box">
-
+<a class="header-link" href="/about_jgc/team_bios/jeremy.html">Jeremy Nguyen</a>
+	  <p>Project Facilitator</p>
+(650) 498-4889
+	  <p><a href="mailto:jeremytnguyen@stanford.edu">jeremytnguyen@stanford.edu</a></p>
+          <br>
  		<a class="header-link" href="/about_jgc/team_bios/leslie.html">Leslie Patron</a>
 	  <p>Project Coordinator</p>
 (650) 736-2015
 	  <p><a href="mailto:lpatron@stanford.edu">lpatron@stanford.edu</a></p>
           <br>
-		
+		<a class="header-link" href="/about_jgc/team_bios/nikki.html">Nikki Riley</a>
+	  <p>Project Facilitator</p>
+(650) 721-5744
+	  <p><a href="mailto:nriley@stanford.edu">nriley@stanford.edu</a></p>
+          <br>
 	  <a class="header-link" href="/about_jgc/team_bios/carmen.html">Carmen Rodr&iacute;guez</a>
 	  <p>Administrative Associate</p>
 (650) 725-3699<br>	  
@@ -160,10 +168,6 @@
 	  <p><a href="mailto:jsoland@stanford.edu">jsoland@stanford.edu</a></p>
           <br>
 
-	  <a class="header-link" href="/about_jgc/team_bios/imeh.html">Imeh Williams</a>
-	  <p>Graduate Research Assistant</p>
-	  <p><a href="mailto:imehw@stanford.edu">imehw@stanford.edu</a></p>
-          <br>
 
   	
           <br>
