with tracking for downloads

--- a/content-head.html
+++ b/content-head.html
@@ -33,6 +33,7 @@
   <script src="/js/libs/jquery-event-tracking.js"></script>
   <script src="/js/libs/hoverIntent.js"></script>
   <script src="/js/libs/superfish.js"></script>
+  <script src="/js/libs/download-analytics.js"></script>
   <script type="text/javascript">
 
   //initialise plugins
