--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" type="text/css" href="css/master_a-master.css?257382971"/>
   <link rel="stylesheet" type="text/css" href="css/index.css?414695834" id="pagesheet"/>
   <!-- Other scripts -->
+  <script src="/js/libs/download-analytics.js"></script>
   <script type="text/javascript">
    document.documentElement.className += ' js';
 </script>
