--- a/our_work/CRISResources.html
+++ b/our_work/CRISResources.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="css/iefonts_index.css?4155947276"/>
   <![endif]-->
   <!-- Other scripts -->
+  <script src="/js/libs/download-analytics.js"></script>
   <script type="text/javascript">
    document.documentElement.className += ' js';
 var __adobewebfontsappname__ = "muse";
