--- a/about_jgc/team_bios/content-nikki.html
+++ b/about_jgc/team_bios/content-nikki.html
@@ -10,7 +10,7 @@
 
 <p>
 <img class="bio-std" src="/images/team/Nikki.jpg">
-<p>Nikki Riley joined the Gardner Center as a Project Facilitator in 2014. Her role is to provide logistical support to a number of projects in San Francisco and Oakland and to serve as a main point of contact for collaborative partner organizations. Prior to joining, she was a Legal Assistant at Stanford Law School's Mills Legal Clinic, where she provided support to students in the International Human Rights and Conflict Resolution Clinic and the Religious Liberty Clinic. Nikki also worked as a Legal Assistant at the boutique litigation firm Valle Makoff LPP and spent a year as a Research Assistant in teh Spirituality and Health Lab at the University of San Francisco. She holds a BA in Psychology from U.S.F.</p>
+<p>Nikki Riley joined the Gardner Center as a Project Facilitator in 2014. Her role is to provide logistical support to a number of projects in San Francisco and Oakland and to serve as a main point of contact for collaborative partner organizations. Prior to joining, she was a Legal Assistant at Stanford Law School's Mills Legal Clinic, where she provided support to students in the International Human Rights and Conflict Resolution Clinic and the Religious Liberty Clinic. Nikki also worked as a Legal Assistant at the boutique litigation firm Valle Makoff LPP and spent a year as a Research Assistant in the Spirituality and Health Lab at the University of San Francisco. She holds a BA in Psychology from U.S.F.</p>
 <br>
 
 
