--- a/about_jgc/team_bios/content-manuelito.html
+++ b/about_jgc/team_bios/content-manuelito.html
@@ -7,7 +7,7 @@
 <span class="content-bold">Social Science Research Associate </span><br>
 <br>
 <p>
-<img class="bio-std" src="/images/team/ManuelitoBiag.jpg">
+<img class="bio-std" src="/images/team/Manuelito.jpg">
 Manuelito Biag received his Ph.D. in Education Policy from the University of California, Davis. His research interests include school-based integrated services, youth development, and the connections between children's and adolescents' health, psychosocial development, and educational trajectories. Manuelito has many years of experience working with young people in different settings including group homes, public schools, and day treatment programs. He joined the Gardner Center as a Research Associate in 2012.
 </p>
          </div>
