--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
         <p id="u1039-3"><a class="nonblock" href="http://jgc.stanford.edu/about_jgc/mission.html" target="_blank"><span id="u1039">Gardner Perspectives</span></a></p>
        </div>
        <div class="clearfix colelem" id="u1040-16"><!-- content -->
-        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/policy_fact_sheets/Absence_Interventions_PFS.pdf" target="_blank">STEPS TO ADDRESSING <br/>TRUANCY & CHRONIC ABSENTEEISM</a></p>
+        <p class="Perspectives-Subhead-Link" id="u1040-6"><a class="nonblock" href="http://gardnercenter.stanford.edu/resources/GardnerPerspectiveJuly2014.pdf" target="_blank">BRIDGING THE GAP:<br/>THE POTENTIAL OF FAMILY ENGAGEMENT</a></p>
         <p id="u1040-7">&nbsp;</p>
-        <p id="u1040-9">A Policy Fact Sheet</p>
+        <p id="u1040-9">Kendra Fehrer, PhD</p>
         <p id="u1040-11"></p>
-        <p><br/>Addressing chronic absenteeism is a continuous process that involves understanding its prevalence and identifying characteristics of chronically absent students, then identifying, applying, and tracking interventions, assessing their effectiveness, and adjusting them accordingly. A core piece of addressing absenteeism is creating a data system which sits at the center of all subsequent steps in the process.</p>
+        <p><br/>In practice, family engagement encompasses a wide range of activities and initiatives, from parental participation in school governance to at-home learning activities to classroom volunteering. At the Gardner Center, I've worked on several projects exploring the impact of family engagement on student and community outcomes. Each has caused me to reflect deeply on what family engagement really is and why it matters.</p>
        </div>
       </div>
      </div>
