update index to point to correct pdf

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -127,7 +127,7 @@
 	  <p><a href="mailto:jeremytnguyen@stanford.edu">jeremytnguyen@stanford.edu</a></p>
           <br>
  		<a class="header-link" href="/about_jgc/team_bios/leslie.html">Leslie Patron</a>
-	  <p>Project Coordinator</p>
+	  <p>Communications Associate</p>
 (650) 736-2015
 	  <p><a href="mailto:lpatron@stanford.edu">lpatron@stanford.edu</a></p>
           <br>
