changes for week

--- a/about_jgc/content-team.html
+++ b/about_jgc/content-team.html
@@ -32,12 +32,7 @@
 	  <p>David Jacks Professor of Education & Public Policy, Emerita</p>
 (650) 323-6736<br>
 	  <p><a href="mailto:milbrey@stanford.edu">milbrey@stanford.edu</a></p>
-	  <br>
-<a class="header-link" href="/about_jgc/team_bios/jorge.html">Jorge Ruiz de Velasco</a>
-	  <p>Associate Director</p>
-(650) 497-0143<br>
-	  <p><a href="mailto:jorge@stanford.edu">jorge@stanford.edu</a></p>
-	  <br>
+
 	  <hr class="short-thick-rule">
           
 	 
@@ -82,12 +77,10 @@
 <p><a href="mailto:larissa.collins@stanford.edu">larissa.collins@stanford.edu</a></p>
           <br>
  <a class="header-link" href="/about_jgc/team_bios/kendra.html">Kendra Fehrer</a>
-	  <p>Social Science Research Associate</p>
+	  <p>Research Associate</p>
 (650) 724-8462<br>	 
  <p><a href="mailto:kcfehrer@stanford.edu">kcfehrer@stanford.edu</a></p>
-
-            </div>
-   	    <div class="column-inner-box">
+<br>
           <a class="header-link" href="/about_jgc/team_bios/jamila.html">Jamila Henderson</a>
 	  <p>Policy Analyst</p>
 (650) 721-9042<br>	 
@@ -99,6 +92,12 @@
  <p><a href="mailto:hofstedt@stanford.edu">hofstedt@stanford.edu</a></p>
           <br>
 
+            </div>
+   	    <div class="column-inner-box">
+<a class="header-link" href="/about_jgc/team_bios/jacob.html">Jacob Leos-Urbel</a>
+	  <p>Associate Director</p>
+	  <p><a href="mailto:jorge@stanford.edu">jleos@stanford.edu</a></p>
+	  <br>
 <a class="header-link" href="/about_jgc/team_bios/judy.html">Judy Liang</a>
 	  <p>CORE Project Facilitator</p>
 (650) 725-9853<br>	  
@@ -108,7 +107,7 @@
 
 
  		<a class="header-link" href="/about_jgc/team_bios/nancy.html">Nancy Mancini</a>
-	  <p>Communications Director</p>
+	  <p>Associate Director</p>
 (650) 724-0713<br>
 	  <p><a href="mailto:nmancini@stanford.edu">nmancini@stanford.edu</a></p>
           <br>
@@ -141,7 +140,11 @@
 (650) 725-3699<br>	  
 <p><a href="mailto:carmenr1@stanford.edu">carmenr1@stanford.edu</a></p>
           <br>
-
+<a class="header-link" href="/about_jgc/team_bios/jorge.html">Jorge Ruiz de Velasco</a>
+	  <p>Associate Director</p>
+(650) 497-0143<br>
+	  <p><a href="mailto:jorge@stanford.edu">jorge@stanford.edu</a></p>
+	  <br>
           <a class="header-link" href="/about_jgc/team_bios/monika.html">Monika Sanchez</a>
 	  <p>Senior Policy Analyst</p>
 (650) 721-5949<br>	  
