redirect to Pinterest

--- a/our_work/booklist.html
+++ b/our_work/booklist.html
@@ -16,13 +16,9 @@ document.createElement("article" );
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
-  <!--#include virtual="/content-head.html" -->
+  Location: http://www.pinterest.com/gardnercenter/self-renewal-youth-development-reading-list/
 </head>
 
 <body>
-<!--#include virtual="/content-menu-top.html" -->
-<!--#include virtual="content-booklist.html" -->
-<!--#include virtual="/content-footer.html" -->
-<!--#include virtual="/content-analytics.html" -->
 </body>
 </html>
