--- a/our_work/booklist.html
+++ b/our_work/booklist.html
@@ -16,7 +16,7 @@ document.createElement("article" );
 <!--[if IE 9 ]>    <html lang="en" class="no-js ie9"> <![endif]-->
 <!--[if (gt IE 9)|!(IE)]><!--> <html lang="en" class="no-js"> <!--<![endif]-->
 <head>
-  Location: http://www.pinterest.com/gardnercenter/self-renewal-youth-development-reading-list/
+  <meta http-equiv="refresh" content="0; url=http://www.pinterest.com/gardnercenter/self-renewal-youth-development-reading-list/" />
 </head>
 
 <body>
