--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
      <div class="clearfix grpelem" id="u7466-9"><!-- content -->
       <p id="u7466-2"><span id="u7466">RESEARCH HIGHLIGHTS</span></p>
       <p class="Main-Headline-Link" id="u7466-5"><a class="nonblock" href="/our_work/CRISResources.html" target="_blank"><span id="u7466-3">College Readiness Resource Series</a></p>
-     <p>More students than ever are enrolling in college after high school, but many are not college-ready. Indicator systems that identify students in need of support are an integral piece of the college-readiness puzzle. The CRIS Initiative takes an innovative tri-level approach which provides data at the student, school, and district levels, enabling districts to take a more comprehensive approach to supporting college readiness.</p>
+
+<p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"></span></span>
+     More students than ever are enrolling in college after high school, but many are not college-ready. Indicator systems that identify students in need of support are an integral piece of the college-readiness puzzle. The CRIS Initiative takes an innovative tri-level approach which provides data at the student, school, and district levels, enabling districts to take a more comprehensive approach to supporting college readiness.</p>
      </div>
      <div class="clearfix grpelem" id="u7524"><!-- group -->
       <div class="grpelem" id="u7504"><!-- custom html -->
@@ -230,8 +232,8 @@
      </div>
      <div class="clearfix grpelem" id="u8392-10"><!-- content -->
       <p id="u8392-2"><span id="u8392">NEWS</span></p>
-      <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/our_work/booklist.html"><span id="u8392-3">Self-Renewal & Youth Development Reading List</span></a></p>
-      <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/selfrenewal.jpeg" alt="" width="100" height="126"/></span></span></span>Fifty years ago this year, John W. Gardner published <i>Self-Renewal, the Individual and the Innovative Society</i>. To commemorate our namesake's milestone achievement in writing about self-renewal as well as his unshaken belief in the power and potential of youth, our staff generated a reading list. Here you'll find fiction and nonfiction titles by writers whose words have contributed to our own continuous learning and self-renewal, and energize us in our work with youth and communities. </a></p>
+    <p class="Main-Headline-Link" id="u8392-5"><a class="nonblock" href="/our_work/booklist.html"><span id="u8392-3">Self-Renewal & Youth Development Reading List</span></a></p>
+    <p id="u8392-8"><span><span class="actAsDiv normal_text" id="u8415"><!-- content --><span class="actAsDiv clip_frame" id="u8409"><!-- image --><img class="block" id="u8409_img" src="images/selfrenewal.jpeg" alt="" width="100" height="126"/></span></span></span>Fifty years ago this year, John W. Gardner published <i>Self-Renewal, the Individual and the Innovative Society</i>. To commemorate our namesake's milestone achievement in writing about self-renewal as well as his unshaken belief in the power and potential of youth, our staff generated a reading list. Here you'll find fiction and nonfiction titles by writers whose words have contributed to our own continuous learning and self-renewal, and energize us in our work with youth and communities. </a></p>
      </div>
      <div class="clip_frame grpelem" id="u9534" data-mu-ie-matrix="progid:DXImageTransform.Microsoft.Matrix(M11=0,M12=1,M21=-1,M22=0,SizingMethod='auto expand')" data-mu-ie-matrix-dx="21" data-mu-ie-matrix-dy="-21"><!-- image -->
       <img class="block" id="u9534_img" src="images/red-circle.png" alt="" width="113" height="70"/>
